// ============================================================
//  PistaGO — Diagrama Entidad-Relación
//  Pedro M. Avilés Aguilera · 2º DAM · IES Portada Alta
//  Pegar en: https://dbdiagram.io
// ============================================================


// ─────────────────────────────────────────
//  ENUM: Rol de usuario en el sistema
// ─────────────────────────────────────────
enum rol_usuario {
  USUARIO         // Socio estándar
  ADMINISTRADOR   // Encargado del club
  SUPERUSUARIO    // Propietario / desarrollador
}

// ─────────────────────────────────────────
//  ENUM: Estado de una reserva
// ─────────────────────────────────────────
enum estado_reserva {
  CONFIRMADA
  CANCELADA_USUARIO
  CANCELADA_ADMIN
  EXPIRADA        // Lista de espera no confirmada a tiempo
}

// ─────────────────────────────────────────
//  ENUM: Tipo de superficie de la pista
// ─────────────────────────────────────────
enum tipo_pista {
  TIERRA_BATIDA
  PISTA_DURA
}

// ─────────────────────────────────────────
//  ENUM: Tipo de notificación
// ─────────────────────────────────────────
enum tipo_notificacion {
  RECORDATORIO_PARTIDO      // 1h antes del partido
  CANCELACION_ADMIN         // Admin cancela tu reserva
  TURNO_LISTA_ESPERA        // Te toca en la cola
  LIMITE_RESERVAS           // Cerca del límite semanal
  CONFIRMACION_RESERVA      // Nueva reserva creada
}


// ─────────────────────────────────────────
//  TABLA: usuario
// ─────────────────────────────────────────
Table usuario {
  id              bigserial     [pk, increment, note: "PK autogenerada"]
  nombre          varchar(100)  [not null, note: "Nombre completo del socio"]
  email           varchar(150)  [not null, unique, note: "Usado como username para login"]
  password_hash   varchar(255)  [not null, note: "BCrypt hash de la contraseña"]
  rol             rol_usuario   [not null, default: "USUARIO"]
  activo          boolean       [not null, default: true, note: "false = cuenta suspendida"]
  fcm_token       varchar(255)  [null, note: "Token Firebase para push notifications"]
  reservas_semana int           [not null, default: 0, note: "Contador semanal, resetea cada lunes"]
  created_at      timestamp     [not null, default: `now()`]
  updated_at      timestamp     [not null, default: `now()`]

  indexes {
    email [unique, name: "uk_usuario_email"]
  }

  Note: "Socios del club. Tres roles: USUARIO, ADMINISTRADOR, SUPERUSUARIO"
}


// ─────────────────────────────────────────
//  TABLA: pista
// ─────────────────────────────────────────
Table pista {
  id              bigserial     [pk, increment]
  nombre          varchar(50)   [not null, unique, note: "Ej: 'Pista 1', 'Pista Central'"]
  tipo            tipo_pista    [not null]
  activa          boolean       [not null, default: true, note: "false = cerrada por mantenimiento"]
  descripcion     varchar(255)  [null, note: "Notas adicionales (iluminación, cubierta, etc.)"]
  created_at      timestamp     [not null, default: `now()`]

  Note: "4 pistas del club: 2 tierra batida, 2 pista dura"
}


// ─────────────────────────────────────────
//  TABLA: reserva
// ─────────────────────────────────────────
Table reserva {
  id              bigserial     [pk, increment]
  usuario_id      bigint        [not null, ref: > usuario.id, note: "FK → usuario que reserva"]
  pista_id        bigint        [not null, ref: > pista.id,   note: "FK → pista reservada"]
  fecha_hora      timestamp     [not null, note: "Inicio de la franja (ej: 2026-04-10 18:00:00)"]
  duracion_min    int           [not null, default: 90, note: "Duración en minutos (franjas de 90 min)"]
  estado          estado_reserva [not null, default: "CONFIRMADA"]
  cancelada_por   bigint        [null, ref: > usuario.id, note: "FK → admin que canceló (si aplica)"]
  motivo_cancel   varchar(255)  [null, note: "Razón de cancelación por parte del admin"]
  created_at      timestamp     [not null, default: `now()`]
  updated_at      timestamp     [not null, default: `now()`]

  indexes {
    (pista_id, fecha_hora, estado) [name: "idx_reserva_pista_fecha_estado",
      note: "Clave para detectar solapamientos"]
  }

  Note: "Reserva de una pista. Validación: no puede haber dos CONFIRMADAS en la misma pista+franja"
}


// ─────────────────────────────────────────
//  TABLA: lista_espera
// ─────────────────────────────────────────
Table lista_espera {
  id              bigserial     [pk, increment]
  usuario_id      bigint        [not null, ref: > usuario.id, note: "FK → usuario en espera"]
  pista_id        bigint        [not null, ref: > pista.id,   note: "FK → pista deseada"]
  fecha_hora      timestamp     [not null, note: "Franja horaria deseada"]
  posicion        int           [not null, note: "Posición en la cola FIFO (1 = primero)"]
  notificado      boolean       [not null, default: false, note: "true = se le avisó de disponibilidad"]
  expira_en       timestamp     [null, note: "Límite para confirmar (now + 10 min tras notificación)"]
  created_at      timestamp     [not null, default: `now()`]

  indexes {
    (pista_id, fecha_hora, posicion) [name: "idx_lista_espera_cola",
      note: "Ordena la cola por pista+franja+posición"]
    (usuario_id, pista_id, fecha_hora) [unique, name: "uk_lista_espera_usuario",
      note: "Un usuario no puede estar dos veces en la misma cola"]
  }

  Note: "Cola FIFO por pista y franja. Al cancelarse una reserva, se notifica al posicion=1"
}


// ─────────────────────────────────────────
//  TABLA: bloqueo_horario
// ─────────────────────────────────────────
Table bloqueo_horario {
  id              bigserial     [pk, increment]
  pista_id        bigint        [not null, ref: > pista.id,      note: "FK → pista bloqueada"]
  admin_id        bigint        [not null, ref: > usuario.id,    note: "FK → admin que bloquea"]
  fecha_hora      timestamp     [not null, note: "Inicio del bloqueo"]
  duracion_min    int           [not null, default: 90]
  motivo          varchar(255)  [not null, note: "Ej: 'Mantenimiento', 'Torneo interno'"]
  created_at      timestamp     [not null, default: `now()`]

  indexes {
    (pista_id, fecha_hora) [name: "idx_bloqueo_pista_fecha"]
  }

  Note: "Franjas bloqueadas por el admin (mantenimiento, torneos). Impiden reservas en ese tramo"
}


// ─────────────────────────────────────────
//  TABLA: notificacion
// ─────────────────────────────────────────
Table notificacion {
  id              bigserial          [pk, increment]
  usuario_id      bigint             [not null, ref: > usuario.id, note: "FK → destinatario"]
  tipo            tipo_notificacion  [not null]
  titulo          varchar(100)       [not null]
  mensaje         varchar(500)       [not null]
  leida           boolean            [not null, default: false]
  reserva_id      bigint             [null, ref: > reserva.id, note: "FK → reserva relacionada (opcional)"]
  enviada_push    boolean            [not null, default: false, note: "true = enviada por FCM"]
  created_at      timestamp          [not null, default: `now()`]

  indexes {
    (usuario_id, leida) [name: "idx_notificacion_usuario_leida"]
  }

  Note: "Historial de notificaciones. Puede ser push (FCM) o solo in-app"
}


// ─────────────────────────────────────────
//  TABLA: configuracion_sistema
// ─────────────────────────────────────────
Table configuracion_sistema {
  id                        bigserial   [pk, increment]
  max_reservas_semana       int         [not null, default: 5,  note: "Límite semanal por usuario"]
  horas_cancelacion_minima  int         [not null, default: 24, note: "Antelación mínima para cancelar (horas)"]
  minutos_confirmacion_espera int       [not null, default: 10, note: "Minutos para confirmar turno en lista espera"]
  duracion_franja_min       int         [not null, default: 90, note: "Duración estándar de cada franja (minutos)"]
  hora_apertura             time        [not null, default: "08:00", note: "Apertura del club"]
  hora_cierre               time        [not null, default: "22:00", note: "Cierre del club"]
  updated_at                timestamp   [not null, default: `now()`]
  updated_by                bigint      [null, ref: > usuario.id, note: "FK → superusuario que modificó"]

  Note: "Tabla singleton (id=1). Parámetros globales modificables solo por SUPERUSUARIO"
}
